add docs, change upload library
