# src/handlers/user/index.ts
@@ -2,7 +2,7 @@ import type { Router } from 'express'
 import ah from 'express-async-handler'
 import { nanoid } from 'nanoid'
 import { ROLES, STORAGE_ENDPOINT_CDN } from '../../config/constants'
-import { _upload } from '../../config/multer-cloud'
+import { upload } from '../../config/multer-cloud'
 import { allowOnly } from '../../middleware/auth'
 import type { Service } from '../../types'
 import { patchUser } from './patchUser'
@@ -15,20 +15,26 @@ const makeUserRouter = ({
   service: Service
 }) => {
   router.patch('/', allowOnly([ROLES.USER]), ah(patchUser({ service })))
+  //TODO: fix validation
   router.post(
     '/faceid',
-    _upload({
-      getKey: (file, req) =>
-        `faceid/pro/${req.tokenData?.userId}/${nanoid()}/${file.originalname}`,
-      type: 'image',
-    }).single('faceid'),
+    allowOnly([ROLES.USER, ROLES.PRO]),
+
     ah(async (req, res) => {
+      const result = await upload({
+        file: req.files?.['faceid'] as any,
+        type: 'image',
+        prefix: `faceid/${req.tokenData!.role}/${
+          req.tokenData?.userId
+        }/${nanoid()}`,
+        fieldName: 'faceid',
+      })
       const data = await service.auth.uploadFaceId({
         userId: req.tokenData?.userId,
         role: req.tokenData!.role,
         proId: req.tokenData?.userId,
-        faceIdPhotoKey: (req.file as any).key,
-        faceIdPhotoOriginalFileName: req.file!.originalname,
+        faceIdPhotoKey: result.key,
+        faceIdPhotoOriginalFileName: result.originalName,
       })
       res.status(200).send({ data })
     }),
@@ -37,20 +43,20 @@ const makeUserRouter = ({
   router.post(
     '/profilephoto',
     allowOnly([ROLES.USER]),
-    _upload({
-      getKey: (file, req) =>
-        `profilephoto/user/${req.tokenData?.userId}/${nanoid()}/${
-          file.originalname
-        }`,
-      type: 'image',
-      acl: 'public-read',
-    }).single('profilephoto'),
     ah(async (req, res) => {
+      const result = await upload({
+        file: req.files?.['profilephoto'] as any,
+        type: 'image',
+        prefix: `profilephoto/user/${req.tokenData?.userId}/${nanoid()}`,
+        fieldName: 'profilephoto',
+        acl: 'public-read',
+      })
+
       const data = await service.user.uploadProfilePhoto({
         userId: req.tokenData!.userId!,
-        profilePhotoKey: (req.file as any).key,
-        profilePhotoOriginalFileName: (req.file as any).originalname,
-        profilePhotoUrl: STORAGE_ENDPOINT_CDN + (req.file as any).key,
+        profilePhotoKey: result.key,
+        profilePhotoOriginalFileName: result.originalName,
+        profilePhotoUrl: STORAGE_ENDPOINT_CDN + result.key,
       })
       res.status(200).send({ data })
     }),
